Fix QG and apply Gitar review comments